Run through main.java and skip the problem4